<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FeelingsTracker</string>
    <string name="title_section0">Feelings Form</string>
    <string name="title_section1">Section 2</string>
    <string name="title_section2">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    
    <string name="question_1_label">How is your general feeling, taking into account your whole life, including work?</string>
    <string name="question_1_min_label">Awful, I cannot imagine feeling worse</string>
    <string name="question_1_max_label">Incredible, life cannot be better</string>
    
    <string name="question_2_label">How is your general feeling, considering only work?</string>
    <string name="question_2_min_label">Awful, I cannot imagine feeling worse</string>
    <string name="question_2_max_label">Incredible, life cannot be better</string>
    
    <string name="question_3_label">How tired do you feel, considering your whole life, including work ?</string>
    <string name="question_3_min_label">I feel I have no energy left, unable to do anything, all my strength has flown away</string>
    <string name="question_3_max_label"> feel I have a lot of energy, I can take on any challenge, I want adventure</string>
    
    <string name="record_feelings">Record Feelings</string>
    <string name="feelings_recorded">Feelings recorded - %1$s</string>
    
</resources>