<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:feelingstracker="http://schemas.android.com/apk/res/com.estellecomment.feelingstracker"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.estellecomment.feelingstracker.FormActivity$FormFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question_1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/question_1_label"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/question_1_scale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:tag="question_1_scale" >

                <TextView
                    android:id="@+id/question_1_min_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_min_label" />

                <include layout="@layout/seek_bar" />

                <TextView
                    android:id="@+id/question_1_max_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_1_max_label" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question_2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/question_2_label"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/question_2_scale"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:tag="question_2_scale" >

                <TextView
                    android:id="@+id/question_2_min_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_2_min_label" />

                <include layout="@layout/scale" />

                <TextView
                    android:id="@+id/question_2_max_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/question_2_max_label" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question_3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/question_3_label"
                android:textStyle="bold" />

            <com.estellecomment.feelingstracker.LabeledSeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                feelingstracker:maxDescription="@string/question_3_max_label"
                feelingstracker:maxValue="3"
                feelingstracker:minDescription="@string/question_3_min_label"
                feelingstracker:minValue="-3" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/submit_commands"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="@string/record_feelings" />

            <TextView
                android:id="@+id/submit_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submit_button"
                android:layout_centerInParent="true" />
             />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>